# cognitia

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DAEMON-PLAN.md  FACTORY-GAPS.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.memory-bank/: BACKLOG.md  STATUS.md  checklist.md  plan.md  progress.md
advanced/: index.html
agent-facade/: index.html
api/: index.html
api-reference/: index.html
architecture/: index.html
authority-system/: index.html
benchmarks/: __init__.py  bench_context.py  bench_memory.py
capabilities/: index.html
claude-code-integration/: index.html
cli/: index.html
cli-runtime/: index.html
code-pipeline/: index.html
codex-integration/: index.html
configuration/: index.html
cookbook/: index.html
credentials/: index.html
design-patterns/: index.html
docs/: advanced.md  agent-facade.md  api-reference.md  architecture.md  capabilities.md  claude-code-integration.md  cli-runtime.md  cli.md  code-pipeline.md  codex-integration.md  configuration.md  cookbook.md  credentials.md  design-patterns.md  evaluation.md  examples.md  getting-started.md  graph-agents.md  hitl.md  index.md  knowledge-bank.md  mcp-server.md  memory-bank.md  memory.md  migration-guide.md  multi-agent.md  observability.md  orchestration.md  pipeline.md  production-safety.md  rag.md  runtime-registry.md  runtimes.md  sessions.md  structured-output.md  tools-and-skills.md  ui-projection.md  use-cases.md  web-tools.md  why-cognitia.md
evaluation/: index.html
examples/: 05_hooks.py  (+35 more)
(+595 files in other folders)
